bug fix for rest, high contrast mode

--- a/src/quinzical/view/css/Styles.css
+++ b/src/quinzical/view/css/Styles.css
@@ -48,3 +48,7 @@
 	-fx-border-width: 3;
 }
 
+
+.jfx-hamburger StackPane {
+	-fx-background-color: lightgrey;
+}
